# gresearch_parquet_benchmarking

./: .gitignore  CMakeLists.txt  Dockerfile  Parquet-CPP Benchmarking.ipynb  Parquet-CPP-Benchmarking.ipynb  README.md  benchmark_results.csv  docker_build_and_test.sh  requirements.txt  setup.sh  test.sh  vcpkg.json
scripts/: modify_flatbuffers.py  schema_full_partial_benchmark.py  visualize_benchmarks.py  visualize_chunks_pages.py  visualize_compression_benchmark.py  visualize_data_reads.py  visualize_decode_and_size.py  visualize_stats.py  vizualize_flatbuffers_benchmark.py  vizualize_row_groups.py
src/: arrow_benchmarks.cc  arrow_benchmarks.h  compression_benchmark.cc  compression_benchmark.h  data_generator.cc  data_generator.h  data_read_benchmark.cc  data_read_benchmark.h  flatbuff_ns.fbs  flatbuff_ns_generated.h  metadata_benchmark.cc  metadata_benchmark.h  pq_fb_ns_data_generator.cc  row_group_benchmarks.cc  table_viewer.cc  test.cc  test_data_generator.cc
